force-app/main/default/objects/Case/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>TEXT(Account.Territory__c) + &quot; - &quot; + TEXT(Account.Region__c)</formula>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>