force-app/main/default/objects/Case/fields/Case_Id_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Case_Id_18_digit__c</fullName>
    <description>Obtain 18-digit non case sensitive Record ID</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Case Id (18-digit)</label>
    <type>Text</type>
</CustomField>