force-app/main/default/objects/Case/fields/Case_Migration_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Migration_Source__c</fullName>
    <description>Use to identify records migrated as a result of M&amp;A</description>
    <label>Case Migration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Migration_Source</valueSetName>
    </valueSet>
</CustomField>