force-app/main/default/objects/Case/fields/CS_Activity__c.field-meta.xml
<CustomField>
    <fullName>CS_Activity__c</fullName>
    <description>Defines a list of CS Activities and Plays</description>
    <inlineHelpText>Defines a list of CS Activities and Plays</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CS_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Anypoint Community Manager</fullName>
            </value>
            <value>
                <fullName>Anypoint Partner Manager</fullName>
            </value>
            <value>
                <fullName>API Designer API Manager</fullName>
            </value>
            <value>
                <fullName>API LC - Async</fullName>
            </value>
            <value>
                <fullName>API Lifecycle - CICD</fullName>
            </value>
            <value>
                <fullName>API Monetization</fullName>
            </value>
            <value>
                <fullName>Architecture Roadmapping</fullName>
            </value>
            <value>
                <fullName>Architecture Review</fullName>
            </value>
            <value>
                <fullName>BrownBags</fullName>
            </value>
            <value>
                <fullName>CaMA</fullName>
            </value>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Composability Workshop</fullName>
            </value>
            <value>
                <fullName>C4E Workshop</fullName>
            </value>
            <value>
                <fullName>Dashboard and Metrics</fullName>
            </value>
            <value>
                <fullName>Deployment - Cloud</fullName>
            </value>
            <value>
                <fullName>Deployment - GovCloud</fullName>
            </value>
            <value>
                <fullName>Deployment - Hybrid</fullName>
            </value>
            <value>
                <fullName>Deployment - Onprem</fullName>
            </value>
            <value>
                <fullName>Enterprise Connectivity - Connectors</fullName>
            </value>
            <value>
                <fullName>Enterprise Connectivity - ERP</fullName>
            </value>
            <value>
                <fullName>Enterprise Connectivity - Salesforce</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>General architectural advice</fullName>
            </value>
            <value>
                <fullName>General Design advice</fullName>
            </value>
            <value>
                <fullName>General Product advice</fullName>
            </value>
            <value>
                <fullName>Go-Live Readiness</fullName>
            </value>
            <value>
                <fullName>GraphQL(API Federation)</fullName>
            </value>
            <value>
                <fullName>Hackathon</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
            </value>
            <value>
                <fullName>KPI Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>