force-app/main/default/objects/Case/fields/CS_Reason__c.field-meta.xml
<CustomField>
    <fullName>CS_Reason__c</fullName>
    <description>CS reason for Tech Request</description>
    <inlineHelpText>CS reason for Tech Request</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success Planning and Advisory</fullName>
            </value>
            <value>
                <fullName>Product Specialization</fullName>
            </value>
            <value>
                <fullName>CSSA Strategic Plays</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>