force-app/main/default/objects/Case/fields/CSA_CSE__c.field-meta.xml
<CustomField>
    <fullName>CSA_CSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSA/CSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>