force-app/main/default/objects/Case/fields/Defect_ER_Link__c.field-meta.xml
<CustomField>
    <fullName>Defect_ER_Link__c</fullName>
    <formula>IF(!ISBLANK(Defect_ER_Number__c), HYPERLINK(&apos;http://www.mulesoft.org/jira/browse/&apos; &amp; Defect_ER_Number__c, Defect_ER_Number__c) ,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Defect DB</inlineHelpText>
    <label>Defect/ER Link</label>
    <type>Text</type>
</CustomField>