force-app/main/default/objects/Case/fields/Defect_ER_Number__c.field-meta.xml
<CustomField>
    <fullName>Defect_ER_Number__c</fullName>
    <label>Defect/ER Number</label>
    <length>240</length>
    <type>Text</type>
</CustomField>