force-app/main/default/objects/Case/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <description>Sales Ops field for sales systems</description>
    <label>Developer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perficient</fullName>
            </value>
            <value>
                <fullName>Simplus</fullName>
            </value>
            <value>
                <fullName>SalesOps</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>