force-app/main/default/objects/Case/fields/Difficulty_Level__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_Level__c</fullName>
    <inlineHelpText>Indicates the technical difficulty for this case.</inlineHelpText>
    <label>Difficulty Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>