force-app/main/default/objects/Case/fields/Don_t_escalate_until__c.field-meta.xml
<CustomField>
    <fullName>Don_t_escalate_until__c</fullName>
    <label>Don&apos;t escalate until</label>
    <type>Date</type>
</CustomField>