force-app/main/default/objects/Case/fields/Empty_Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Empty_Account_Region__c</fullName>
    <formula>TEXT(Account.Territory__c) + &quot;-&quot; + TEXT(Account.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empty Account Region</label>
    <type>Text</type>
</CustomField>