force-app/main/default/objects/Case/fields/Escalation_Priority__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Priority__c</fullName>
    <description>This field will be used by Support Managers to properly prioritize escalated cases in Support</description>
    <label>Escalation Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocker</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>