force-app/main/default/objects/Case/fields/Found_Answer_In__c.field-meta.xml
<CustomField>
    <fullName>Found_Answer_In__c</fullName>
    <inlineHelpText>How was the appropriate answer to this inquiry discovered?</inlineHelpText>
    <label>Found Answer In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Based on Previous Experience</fullName>
            </value>
            <value>
                <fullName>Discussion on MuleSourceDev</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Existing Salesforce Cases</fullName>
            </value>
            <value>
                <fullName>Found by Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Found Existing JIRA</fullName>
            </value>
            <value>
                <fullName>Internal WiKi</fullName>
            </value>
            <value>
                <fullName>Internet Search</fullName>
            </value>
            <value>
                <fullName>Knowledge Base</fullName>
            </value>
            <value>
                <fullName>Other Internal Discussion</fullName>
            </value>
            <value>
                <fullName>Public Forums</fullName>
            </value>
            <value>
                <fullName>Sales Operations Case</fullName>
            </value>
            <value>
                <fullName>Worked with Engineering</fullName>
            </value>
            <value>
                <fullName>Worked with PM</fullName>
            </value>
            <value>
                <fullName>Worked with PS</fullName>
            </value>
            <value>
                <fullName>Worked with Vendor/Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>