force-app/main/default/objects/Case/fields/JVMVersion__c.field-meta.xml
<CustomField>
    <fullName>JVMVersion__c</fullName>
    <description>The version of JVM in use</description>
    <label>JVM Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.2</fullName>
            </value>
            <value>
                <fullName>1.4</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>1.6</fullName>
            </value>
            <value>
                <fullName>1.7</fullName>
                <default>true</default>
                <label>1.7</label>
            </value>
            <value>
                <fullName>1.8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>