force-app/main/default/objects/Case/fields/Last_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_Comment__c</fullName>
    <description>This field will be populated by the latest case comment by a workflow and upon update will fire a notification to the Support team</description>
    <label>Last Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>