force-app/main/default/objects/Case/fields/LOE__c.field-meta.xml
<CustomField>
    <fullName>LOE__c</fullName>
    <description>Level of Effort for SalesOperations</description>
    <inlineHelpText>Level of Effort for SalesOperations</inlineHelpText>
    <label>LOE - Ops</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>