force-app/main/default/objects/Case/fields/LOE_Other__c.field-meta.xml
<CustomField>
    <fullName>LOE_Other__c</fullName>
    <description>Level of Effort for other than SalesOps</description>
    <inlineHelpText>Level of Effort for other than SalesOps</inlineHelpText>
    <label>LOE - Other</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>