force-app/main/default/objects/Case/fields/Mule_Runtime_Version__c.field-meta.xml
<CustomField>
    <fullName>Mule_Runtime_Version__c</fullName>
    <inlineHelpText>Select the affected Runtime version (API Gateway, CloudHub)</inlineHelpText>
    <label>Mule Runtime Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Support_Product_Version</valueSetName>
    </valueSet>
</CustomField>