force-app/main/default/objects/Case/fields/MuleSoft_May_Access_My_CloudHub_Workers__c.field-meta.xml
<CustomField>
    <fullName>MuleSoft_May_Access_My_CloudHub_Workers__c</fullName>
    <label>MuleSoft May Access My CloudHub Workers</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Support_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>