force-app/main/default/objects/Case/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Operating System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AIX</fullName>
            </value>
            <value>
                <fullName>CentOS</fullName>
            </value>
            <value>
                <fullName>CloudHub</fullName>
            </value>
            <value>
                <fullName>Debian</fullName>
            </value>
            <value>
                <fullName>HP-UX</fullName>
            </value>
            <value>
                <fullName>Mac OS</fullName>
            </value>
            <value>
                <fullName>Red Hat Linux</fullName>
            </value>
            <value>
                <fullName>Solaris</fullName>
            </value>
            <value>
                <fullName>Suse Linux</fullName>
            </value>
            <value>
                <fullName>Ubuntu Linux</fullName>
            </value>
            <value>
                <fullName>Windows (Generic)</fullName>
            </value>
            <value>
                <fullName>Windows 2000</fullName>
            </value>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows 8</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 R2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2012</fullName>
            </value>
            <value>
                <fullName>Windows Server 2012 R2</fullName>
            </value>
            <value>
                <fullName>Windows XP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>