force-app/main/default/objects/Case/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <inlineHelpText>From whom did this request originate?</inlineHelpText>
    <label>Originator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Act II</fullName>
            </value>
            <value>
                <fullName>Beta Program</fullName>
            </value>
            <value>
                <fullName>Other Internal</fullName>
            </value>
            <value>
                <fullName>Other Sales</fullName>
            </value>
            <value>
                <fullName>Paid Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>PS Engagement</fullName>
            </value>
            <value>
                <fullName>SE - POC</fullName>
            </value>
            <value>
                <fullName>SE - Pre-Closing</fullName>
            </value>
            <value>
                <fullName>Sales Operations Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>