force-app/main/default/objects/Case/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solution Suggested</fullName>
            </value>
            <value>
                <fullName>Patch Provided</fullName>
            </value>
            <value>
                <fullName>Defect/ER Addressed</fullName>
            </value>
            <value>
                <fullName>More Info Required</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Not Supported</fullName>
            </value>
            <value>
                <fullName>Unable to Reproduce</fullName>
            </value>
            <value>
                <fullName>Works as Designed</fullName>
            </value>
            <value>
                <fullName>Will Not Fix</fullName>
            </value>
            <value>
                <fullName>Defect/ER Submitted</fullName>
            </value>
            <value>
                <fullName>With Customer Success</fullName>
            </value>
            <value>
                <fullName>With Engineering</fullName>
            </value>
            <value>
                <fullName>With InfoSec</fullName>
            </value>
            <value>
                <fullName>With Product Management</fullName>
            </value>
            <value>
                <fullName>With SalesOps</fullName>
            </value>
            <value>
                <fullName>Resolved by Customer</fullName>
            </value>
            <value>
                <fullName>Resolved by Support</fullName>
            </value>
            <value>
                <fullName>Sales Operations Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>