force-app/main/default/objects/Case/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <inlineHelpText>In which deployment environment is the issue being currently experienced?</inlineHelpText>
    <label>Development Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>