force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product-OLD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Management</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Anypoint MQ</fullName>
            </value>
            <value>
                <fullName>API Gateway</fullName>
            </value>
            <value>
                <fullName>APIkit</fullName>
            </value>
            <value>
                <fullName>API Manager</fullName>
            </value>
            <value>
                <fullName>CloudHub</fullName>
            </value>
            <value>
                <fullName>Design Center</fullName>
            </value>
            <value>
                <fullName>Expressway Service Gateway</fullName>
            </value>
            <value>
                <fullName>MuleSoft Tokenization Service</fullName>
            </value>
            <value>
                <fullName>Anypoint CLI</fullName>
            </value>
            <value>
                <fullName>Anypoint Private Cloud Edition</fullName>
            </value>
            <value>
                <fullName>Anypoint Platform</fullName>
            </value>
            <value>
                <fullName>Connectors</fullName>
            </value>
            <value>
                <fullName>Data Gateway</fullName>
            </value>
            <value>
                <fullName>DataMapper</fullName>
            </value>
            <value>
                <fullName>DataWeave</fullName>
            </value>
            <value>
                <fullName>DevKit</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Mule Agent</fullName>
            </value>
            <value>
                <fullName>Mule Management Console (MMC)</fullName>
            </value>
            <value>
                <fullName>Mule Maven Plugin</fullName>
            </value>
            <value>
                <fullName>Mule Runtime</fullName>
            </value>
            <value>
                <fullName>MUnit</fullName>
            </value>
            <value>
                <fullName>Partner Manager</fullName>
            </value>
            <value>
                <fullName>Runtime Manager</fullName>
            </value>
            <value>
                <fullName>Anypoint Enterprise Security Module</fullName>
            </value>
            <value>
                <fullName>Anypoint Studio</fullName>
            </value>
            <value>
                <fullName>Support Center</fullName>
            </value>
            <value>
                <fullName>Tcat Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>