force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>DEPRECATE</description>
    <label>Reason-DX</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Best Practices</fullName>
                <label>Adoption Best Practices (C4E, Reuse, Developer Engagement, Governance, Documentation etc)</label>
            </value>
            <value>
                <fullName>Architecture Roadmap Workshop</fullName>
            </value>
            <value>
                <fullName>C4E Workshop</fullName>
            </value>
            <value>
                <fullName>CAMA</fullName>
            </value>
            <value>
                <fullName>D4 Workshop</fullName>
            </value>
            <value>
                <fullName>Deployment &amp; Infra</fullName>
                <label>Deployment &amp; Infra (CloudHub, On-Premises, Runtime Fabric, VPC/VPN etc)</label>
            </value>
            <value>
                <fullName>Hackathon</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
                <label>Health Check (go-live/milestone check, code review, high level arch review)</label>
            </value>
            <value>
                <fullName>KPI Day</fullName>
            </value>
            <value>
                <fullName>Monetization Workshop</fullName>
            </value>
            <value>
                <fullName>Performance Profiling</fullName>
            </value>
            <value>
                <fullName>Technical Best Practices</fullName>
                <label>Technical Best Practices (CI/CD, Unit Testing, Access Management, security, etc)</label>
            </value>
            <value>
                <fullName>Think Tank</fullName>
            </value>
            <value>
                <fullName>Office Hours</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Best Practice / Guidance</fullName>
                <isActive>false</isActive>
                <label>Best Practice / Guidance</label>
            </value>
            <value>
                <fullName>How To</fullName>
                <isActive>false</isActive>
                <label>How To</label>
            </value>
            <value>
                <fullName>Move to MMC</fullName>
                <isActive>false</isActive>
                <label>Move to MMC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>