force-app/main/default/objects/Case/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>SEEMA</fullName>
            </value>
            <value>
                <fullName>ASEAN</fullName>
            </value>
            <value>
                <fullName>NORTH APAC</fullName>
            </value>
            <value>
                <fullName>KOR</fullName>
            </value>
            <value>
                <fullName>INDIAN SUB</fullName>
            </value>
            <value>
                <fullName>JP</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>