force-app/main/default/objects/Case/fields/Request_for_Assistance_by__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Assistance_by__c</fullName>
    <label>Requested by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>CSSA</fullName>
            </value>
            <value>
                <fullName>CSD</fullName>
            </value>
            <value>
                <fullName>CS RVP</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>