force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account - Merge</fullName>
            </value>
            <value>
                <fullName>Account - Update</fullName>
            </value>
            <value>
                <fullName>Close Opportunity</fullName>
            </value>
            <value>
                <fullName>Dashboard / Report</fullName>
            </value>
            <value>
                <fullName>Feature Request -- Custom App</fullName>
            </value>
            <value>
                <fullName>Feature Request -- Custom Field</fullName>
            </value>
            <value>
                <fullName>Feature Request -- Workflow / Validation Rule</fullName>
            </value>
            <value>
                <fullName>Invoice Reminder</fullName>
            </value>
            <value>
                <fullName>Lead Routing Request</fullName>
            </value>
            <value>
                <fullName>NDA / MNDA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Salesforce Issue</fullName>
            </value>
            <value>
                <fullName>Support Portal User</fullName>
            </value>
            <value>
                <fullName>Temp Key</fullName>
            </value>
            <value>
                <fullName>User Access</fullName>
            </value>
            <value>
                <fullName>Vendor Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>