force-app/main/default/objects/Case/fields/Resolution_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Confirmed__c</fullName>
    <inlineHelpText>Was the resolution of this case confirmed by the customer?</inlineHelpText>
    <label>Resolution Confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>